2014-03-31 Added global style, fixing android highlight when focus on HTML element, to the Player
2014-03-31 Fixed bug with disable/enable in Coloring module.
2014-03-28 Fixed problem with checking answers when not all gaps were filled in Basic Math Gaps module
2014-03-28 Player API extended to switch pages by page id
2014-03-27 New module Done, it checks whenever all activities on the page has been attempted and button Submit has been pressed, then it sends 'Done' event
2014-03-27 Fixed issue with improper total lesson scoring in hierarchical lesson report.
2014-03-27 Score is saved by page id instead of name.
2014-03-27 Fixed issue with Basic Math Gaps events
2014-03-27 New module Next, similar to Next Page Button module, navigating to next page, but first it checks whenever all activities on the page has been attempted and button Submit has been pressed.
2014-03-26 Added command isAttempted for Connection addon
2014-03-26 Fixed couple of issues with Shape Tracing addon
2014-03-26 Added command isAttempted for True/False addon
2014-03-26 Is attempted command for Fractions addon
2014-03-25 New addons Points and Lines and Edge Animation
2014-03-25 Fixed problem with report score for not visited pages
2014-03-25 Fixed problem with reset and set state in Submit module
2014-03-24 "Return first score" flag modifies how the score is presented to the user
2014-03-24 New module Submit, which acts like a Check module, but checks results only when all modules are in attempted state
2014-03-24 Added handling custom events in the Advanced Connector
2014-03-24 Added custom event to event bus
2014-03-21 Added command isAttempted to Image Gap module
2014-03-21 Added new text properties to check button
2014-03-21 Added checkAnswers and uncheckAnswers method to Player API
2014-03-21 Added command isAttempted to Text module
2014-03-21 New addon: Hierarchical_Lesson_Report
2014-03-19 Fixed issue with special characters external links in Text module