@@ -1,6 +1,7 @@
 package com.lorepo.icplayer.client.module.text;
 
 import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.List;
 
 import com.lorepo.icf.utils.StringUtils;
@@ -77,4 +78,12 @@ public class GapInfo {
 	public int getValue() {
 		return value;
 	}
+
+	/**
+	 * @return answers
+	 */
+	public Iterator<String> getAnswers() {
+		return answers.iterator();
+	}
+
 }
