@@ -1,1 +1,43 @@
-<?xml version='1.0' encoding='UTF-8' ?><page layout='pixels' width='0' height='0'><modules><addonModule addonId='feedback' id='feedback1' left='147' top='58' width='452' height='416' isVisible='true'><properties><property name='Responses' type='list'><template><property name='Unique response ID' type='string' value=''/><property name='Status' type='string' value=''/><property name='Text' type='html'></property></template><items><item><property name='Unique response ID' type='string' value='X'/><property name='Status' type='string' value='T'/><property name='Text' type='html'>&lt;img src=&quot;/file/serve/180636&quot;&gt;&lt;br&gt;fasdfsdafasd&lt;br&gt;fasdfsdafasd&lt;br&gt;&lt;br&gt;</property></item></items></property><property name='Default response' type='html'></property><property name='Preview response ID' type='string' value='X'/><property name='Reset response on page change' type='boolean' value=''/><property name='Fade transitions' type='boolean' value=''/><property name='Center horizontally' type='boolean' value='False'/><property name='Center vertically' type='boolean' value='True'/></properties></addonModule><addonModule addonId='Single_State_Button' id='Single_State_Button1' left='10' top='10' width='100' height='100' isVisible='true'><properties><property name='Title' type='string' value=''/><property name='Image' type='image' value=''/><property name='onClick' type='event'>feedback1.change(&quot;X&quot;)</property><property name='Disable' type='boolean' value=''/></properties></addonModule></modules></page>
+<?xml version='1.0' encoding='UTF-8' ?>
+<page layout='pixels' width='0' height='0'>
+	<modules>
+		<addonModule addonId='feedback' id='feedback1' left='147'
+			top='58' width='452' height='416' isVisible='true'>
+			<properties>
+				<property name='Responses' type='list'>
+					<template>
+						<property name='Unique response ID' type='string' value='' />
+						<property name='Status' type='string' value='' />
+						<property name='Text' type='html'></property>
+					</template>
+					<items>
+						<item>
+							<property name='Unique response ID' type='string' value='X' />
+							<property name='Status' type='string' value='T' />
+							<property name='Text' type='html'>&lt;img
+								src=&quot;/file/serve/180636&quot;&gt;&lt;br&gt;fasdfsdafasd&lt;br&gt;fasdfsdafasd&lt;br&gt;&lt;br&gt;
+							</property>
+						</item>
+					</items>
+				</property>
+				<property name='Default response' type='html'></property>
+				<property name='Preview response ID' type='string' value='X' />
+				<property name='Reset response on page change' type='boolean'
+					value='' />
+				<property name='Fade transitions' type='boolean' value='' />
+				<property name='Center horizontally' type='boolean' value='False' />
+				<property name='Center vertically' type='boolean' value='True' />
+			</properties>
+		</addonModule>
+		<addonModule addonId='Single_State_Button' id='Single_State_Button1'
+			left='10' top='10' width='100' height='100' isVisible='true'>
+			<properties>
+				<property name='Title' type='string' value='' />
+				<property name='Image' type='image' value='' />
+				<property name='onClick' type='event'>feedback1.change(&quot;X&quot;)
+				</property>
+				<property name='Disable' type='boolean' value='' />
+			</properties>
+		</addonModule>
+	</modules>
+</page>
