@@ -1,3 +1,4 @@
+2014-03-31 Added parseGaps command to JavaScriptPlayerServices
 2014-03-31 Added global style, fixing android highlight when focus on HTML element, to the Player
 2014-03-31 Fixed bug with disable/enable in Coloring module.
 2014-03-28 Fixed problem with checking answers when not all gaps were filled in Basic Math Gaps module
